Flex display .container .... Add flex: 1 to .container to make it stretch Add flex-shrink: 0 to sidebar to prevent shrink

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -17,6 +17,12 @@ body {
   padding-left: 16px;
 }
 
+.container {
+  display: flex;
+  flex: 1;
+}
+
+
 .footer {
   height: 72px;
   background: #eee;
@@ -27,6 +33,7 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .card {
